# hestia

./: .env  .gitignore  Cargo.toml  main.sqlite3
app/: Cargo.toml  Dioxus.toml  default.nix
app/assets/: tailwind.css
app/file_system/: watcher.rs
app/src/: main.rs
app/src/components/: mod.rs
app/src/components/daisy/: mod.rs
app/src/file_system/: mod.rs  watcher.rs
app/src/server/: database.rs  files.rs  mod.rs
app/src/utils/: logs.rs  mod.rs
app/src/views/: home.rs
assets/: tailwind.css
migration/src/: m20250222_173535_create_file_tags.rs
src/components/: hero.rs
test_vault/: vall_4.md
