[package]
name = "hestia"
version = "0.1.0"
authors = ["emilyantosch <emilyluciaantosch@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
tokio = { version = "*" }
sea-orm = { version = "1.1.5", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
rfd = { version = "*", default-features = false, features = ["tokio", "xdg-portal"]}

[features]
server = ["dioxus/server"]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
